name:                 giraffecc
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Biko Pougala
maintainer:           s1651792@sms.ed.ac.uk
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable giraffecc
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
